FreeBSD Foundation.

This file contains major changes to ports and the ports infrastructure.
Intended audience are ports committers, maintainers and other
developers. User oriented changes should be submitted for inclusion
in the release notes and/or placed into UPDATING.

All ports committers are allowed to commit to this file.

20120830:
AUTHOR: beat@FreeBSD.org

  * CCACHE support for building ports has been added (depends on
    devel/ccache). Therefore new user settable variables are available:

    WITH_CCACHE_BUILD - Enable CCACHE support (Default off)

    NO_CCACHE         - Disable CCACHE support for example for certain
                        ports if CCACHE is enabled.

    By default CCACHE uses $HOME/.ccache as cache directory. To use
    a non-default cache directory this could be overwritten like:

    MAKE_ENV+= CCACHE_DIR=/var/cache/ccache

20120820:
AUTHOR: gahr@FreeBSD.org

  * GitHub support has been integrated into bsd.sites.mk. In order to
    fetch distfiles from GitHub, a port must define USE_GITHUB along
    with the following variables:

    GH_ACCOUNT  - account name of the GitHub user hosting the project
                  default: not set, mandatory
   
    GH_PROJECT  - name of the project on GitHub
                  default: ${PORTNAME}
   
    GH_TAGNAME  - name of the tag to download (master, 2.0.1, ...)
                  default: ${DISTVERSION}
   
    GH_COMMIT   - first 7 digits of the commit that generated GH_TAGNAME
                  (man git-describe(1))
                  default: not set, mandatory

    The port www/tivoka is an example how to use this mechanism.

20120726:
AUTHOR: bapt@FreeBSD.org

  * new macro USE_PKGCONFIG has been introduce in place of
    USE_GNOME= pkgconfig

    USE_PKGCONFIG= yes and USE_PKGCONFIG= build
    for build only dependency

    USE_PKGCONFIG= run
    for run only dependency

    USE_PKGCONFIG= both
    for both build and run dependency

20120715:
AUTHOR: beat@FreeBSD.org
